增加订阅配置更新接口
